--- a/PlaylistProject/s/css/styles.css
+++ b/PlaylistProject/s/css/styles.css
@@ -1,3 +1,29 @@
+@import url(http://fonts.googleapis.com/css?family=Arimo:400,700,400italic);
+@import url(http://fonts.googleapis.com/css?family=Covered+By+Your+Grace);
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body { font-family: 'Arimo', "Helvetica Neue", "Helvetica", "Arial", sans-serif}
+
+section.container {
+    width: 1800px;
+    margin: auto;
+    box-sizing: border-box;
+}
+
+a { text-decoration: none; }
+
+h5.showName a { text-decoration: none;
+                color: #58BCFF;
+}
+
+h5.showName a:hover { color: #F80046; }
+
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000;
@@ -23,6 +49,7 @@
 .front, .back {
 	backface-visibility: hidden;
     width: 349px;
+    height: 200px;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -38,6 +65,8 @@
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .genre {
@@ -52,10 +81,12 @@
 
 
 #attribution { display: inline;
-               float: right;}
+               float: right;
+               border: 5px outset #FF0031;}
 
 iframe { width: 350px;
          height: auto;
+         padding-bottom: 20%;
          }
 
 body {
@@ -64,17 +95,17 @@ body {
 }
 
 h4#headline {
-    color: #F0F0F0;
-    padding-bottom: 2rem;
+    color: rgba(209, 223, 226, 0.52);
+    margin-bottom: 100px;
+    font-size: 1.5rem;
 }
 
 h5.showName { color: #58BCFF;
               font-size: 1rem;
-              width: 75%;
             }
 
 article { padding-bottom: 3rem;
-          margin-left: 10%; }
+        }
 
 .artist-image {
                height: auto;
@@ -100,7 +131,10 @@ div.artist-image { height: 100%;
     font-size: .5rem;
     text-decoration: none;
     font-weight: bold;
+    color: #09B0E7;
     }
+
+.bio a:hover { color: #09B0E7; }
 
 .info {
     height: 200px;
@@ -118,6 +152,7 @@ div.artist-image { height: 100%;
 
 p.no-image {
     font-size: 2rem;
+    font-family: 'Covered By Your Grace', cursive;
     font-weight: bold;
     text-align: center;
     padding-top: 10%;
@@ -125,13 +160,58 @@ p.no-image {
     }
 
 .tile {
-    width: 500px;
+    margin-left: 60px;
+    width: 380px;
     display: inline-block;
      }
 
 .album-style { box-shadow: 0 0 2rem black;
-                  height: 349px;
+                  height: 200px;
                   width: 349px;
                 }
 
 a:hover { color: white; }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: #a4a4a4;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #3f5d6b;
+    border: 1px groove rgba(9, 17, 20, 0.56);
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #aaa;
+}
+
+
+@media (max-width: 1600px) {
+    section.container {
+        width: 1350px;
+    }
+    article.tile {
+    }
+}
+
+@media (max-width: 1200px) {
+    section.container {
+        width: 1200px;
+    }
+
+    article.tile {
+    }
+}
+
+@media (max-width: 950px) {
+    section.container {
+        width: 900px;
+    }
+    article.tile {
+
+    }
+}
