--- a/templates/gen_playlists/index.html
+++ b/templates/gen_playlists/index.html
@@ -6,10 +6,11 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
     <head>
         {% load staticfiles %}
-        <link rel="stylesheet" type="text/css" href="{% static 'foundation/css/normalize.css' %}" />
-        <link rel="stylesheet" type="text/css" href="{% static 'foundation/css/foundation.min.css' %}" />
-        <link rel="stylesheet" type="text/css" href="{% static 'foundation/css/styles.css' %}" />
-        <script src="{% static 'foundation/js/scripts.js' %}"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
+        <!--<script src="{% static 'js/vendor/jquery.js' %}"></script>-->
+        <script src="{% static 'js/scripts.js' %}"></script>
+
 
         <meta charset="utf-8">
         <title>Generate Playlists</title>
@@ -25,9 +26,10 @@
     </head>
 
     <body>
-    <img id="attribution" src="{% static 'foundation/img/sk_attribution.jpg' %}" alt="Concerts by Songkick" />
-    <h4 id="headline">Upcoming shows in the {{profile.city}} area: </h4>
-    <section class="five columns">
+    <!--- {{ from_cache }} --->
+    <img id="attribution" src="{% static 'img/sk_attribution.jpg' %}" alt="Concerts by Songkick" />
+    <h4 id="headline">Upcoming shows in the {{ city }} area: </h4>
+    <section class="container">
     {% if shows %}
         {% for show in shows %}
             {% if show.track %}
